--- a/src/index.css
+++ b/src/index.css
@@ -14,8 +14,8 @@
 
 body {
   margin: 0;
-  background-color: #faaca8;
-  background-image: linear-gradient(19deg, #faaca8 0%, #ddd6f3 100%);
+  background-color: #004B87;
+  background-image: linear-gradient(0deg, #026397 10%, #0f101f 40%);
 }
 
 body.greenScreen {
